# audiodecoder.wsr

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.wsr/: addon.xml  addon.xml.in
audiodecoder.wsr/resources/: settings.xml
audiodecoder.wsr/resources/language/resource.language.ca_es/: strings.po
audiodecoder.wsr/resources/language/resource.language.da_dk/: strings.po
audiodecoder.wsr/resources/language/resource.language.de_de/: strings.po
audiodecoder.wsr/resources/language/resource.language.en_gb/: strings.po
audiodecoder.wsr/resources/language/resource.language.es_es/: strings.po
audiodecoder.wsr/resources/language/resource.language.fr_fr/: strings.po
audiodecoder.wsr/resources/language/resource.language.hr_hr/: strings.po
audiodecoder.wsr/resources/language/resource.language.id_id/: strings.po
audiodecoder.wsr/resources/language/resource.language.it_it/: strings.po
audiodecoder.wsr/resources/language/resource.language.ko_kr/: strings.po
audiodecoder.wsr/resources/language/resource.language.ru_ru/: strings.po
audiodecoder.wsr/resources/language/resource.language.zh_cn/: strings.po
debian/: changelog.in  control  copyright  rules
lib/in_wsr/: CMakeLists.txt  ws_audio.c  ws_audio.h  ws_memory.c  wsr_player.c  wsr_player.h
src/: Settings.cpp  Settings.h  WSRCodec.cpp  WSRCodec.h  extended_m3u_playlist.cpp  extended_m3u_playlist.h
